поправлено расположение модалок в конструкторе

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -3464,18 +3464,34 @@ footer {
         width: 100%;
         height: 100%;
         display: none;
-        align-items: center;
-        justify-content: center;
         &._active{
-            display: flex;
+            display: block;
         }
     }
     .popup{
         display: none;
-        position: relative;
-        z-index: 2;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
         &._active{
             display: block;
+        }
+        &._wall{
+            max-width: 400px;
+            left: 175px;
+            transform: translateY(-50%)
+        }
+        &._floor{
+            top: unset;
+            bottom: 80px;
+            left: 50%;
+            transform: translateX(-50%)
+        }
+        &._right{
+            max-width: 300px;
+            left: 80px;
+            transform: translateY(-50%)
         }
     }
 }
