--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -2200,6 +2200,7 @@ footer {
             position: absolute;
             display: flex;
             align-items: center;
+            cursor: pointer;
             &._active{
                 .constructor-item__dot{
                     &-name{
@@ -2464,6 +2465,8 @@ footer {
                 backdrop-filter: blur(16px);
                 border-radius: 4px;
                 padding-top: 52px;
+                max-height: 364px;
+                overflow-y: auto;
                 z-index: 1;
                 li{
                     cursor: pointer;
@@ -2881,11 +2884,35 @@ footer {
     .material{
         display: block;
         width: 72px;
+        &._selected{
+            .material{
+                &__name{
+                    font-weight: 700;
+                    color: #1374CF;
+                }
+                &__image{
+                    &::after{
+                        border-color: #1374CF;
+                    }
+                }
+            }
+        }
         &__image{
             margin: 0 6px;
             border-radius: 4px;
             overflow: hidden;
             position: relative;
+            &::after{
+                content: '';
+                position: absolute;
+                left: 0;
+                top: 0;
+                width: 100%;
+                height: 100%;
+                border-radius: 4px;
+                border: transparent 1px solid;
+                pointer-events: none;
+            }
             img{
                 display: block;
                 width: 60px;
