ховер для .finishing__select-dropdown li

--- a/src/css/_media.scss
+++ b/src/css/_media.scss
@@ -885,6 +885,11 @@
                 }
             }
         }
+        .material{
+            &__image::after{
+                border-width: 1px;
+            }
+        }
     }
 }
 
