--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -2471,10 +2471,14 @@ footer {
                 li{
                     cursor: pointer;
                     padding: 8px 16px;
+                    transition: background-color .2s ease;
                     .finishing__select{
                         &-wrapper{
                             justify-content: space-between;
                         }
+                    }
+                    &:hover{
+                        background-color: #F7F7F7;
                     }
                 }
             }
@@ -2910,7 +2914,7 @@ footer {
                 width: 100%;
                 height: 100%;
                 border-radius: 4px;
-                border: transparent 1px solid;
+                border: transparent 2px solid;
                 pointer-events: none;
             }
             img{
